--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appBg"
-    tools:context=".MainActivity">
+    tools:context=".a_MainActivity">
     
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
@@ -19,29 +19,38 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp">
-            <ImageView
-                android:id="@+id/user"
+            <LinearLayout
+                android:id="@+id/userLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/toolTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Good Evening"
+                    android:textSize="@dimen/_19sdp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/roboto_bold"/>
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                android:background="@drawable/user_icon"/>
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/actionSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_toRightOf="@+id/user"
-                android:layout_toLeftOf="@+id/notify"
-                android:background="@drawable/search_view_bg"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                app:iconifiedByDefault="false"
-                app:queryHint="Search Indian Movie,Hollywood"/>
-            <ImageView
-                android:id="@+id/notify"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:background="@drawable/baseline_notifications_24"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"/>
+                android:layout_alignParentEnd="true"
+                app:cardCornerRadius="@dimen/_150sdp"
+                app:cardBackgroundColor="@color/appBg">
+                <ImageView
+                    android:id="@+id/userIcon"
+                    android:layout_width="@dimen/_28sdp"
+                    android:layout_height="@dimen/_28sdp"
+                    android:background="@drawable/user_icon"
+                    android:layout_gravity="center"
+                    android:contentDescription="TODO" />
+            </androidx.cardview.widget.CardView>
+
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -60,7 +69,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolBar"
         android:layout_above="@+id/bnView"/>
-
-
-
 </RelativeLayout>
