--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -8,42 +8,34 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmer"
             android:layout_width="match_parent"
-            android:layout_height="688dp"
-            android:layout_below="@+id/sifiTxt">
+            android:layout_height="688dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="732dp"
                 android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/_15sdp">
 
+                <include
+                    layout="@layout/slide_sample" />
+                <include
+                    layout="@layout/movie_item_row_shimar_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginLeft="@dimen/_5sdp" />
 
-
-                <include layout="@layout/movie_item_row_shimar" />
-
-                <include layout="@layout/movie_item_row_shimar" />
-
-                <include layout="@layout/movie_item_row_shimar" />
-            </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/_15sdp">
-
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="horizontal">
 
 
                     <include layout="@layout/movie_item_row_shimar" />
@@ -52,12 +44,39 @@
 
                     <include layout="@layout/movie_item_row_shimar" />
                 </LinearLayout>
+
+                <include
+                    layout="@layout/movie_item_row_shimar_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/_15sdp">
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="horizontal">
 
+                    <include layout="@layout/movie_item_row_shimar" />
+
+                    <include layout="@layout/movie_item_row_shimar" />
+
+                    <include layout="@layout/movie_item_row_shimar" />
+                </LinearLayout>
+
+                <include
+                    layout="@layout/movie_item_row_shimar_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="horizontal">
 
 
                     <include layout="@layout/movie_item_row_shimar" />
@@ -69,89 +88,18 @@
             </LinearLayout>
 
         </com.facebook.shimmer.ShimmerFrameLayout>
-
-        <TextView
-            android:id="@+id/sifiTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/popular_sifi_movie"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_14sdp"
-            android:visibility="gone"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/sifiRecycler"
+        <include
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_180sdp"
-            android:layout_below="@+id/sifiTxt"
-            android:visibility="gone"/>
-
-        <TextView
-            android:id="@+id/ThrillerTxt"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/sifiRecycler"
-            android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/thrillerMovie"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            android:textSize="@dimen/_14sdp" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ThrillerRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_180sdp"
-            android:layout_below="@+id/ThrillerTxt"
-            android:visibility="gone"/>
-        <TextView
-            android:id="@+id/StockMarketMovie_Txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ThrillerRecycler"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/StockMarketMovie"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_14sdp"
-            android:visibility="gone"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/StockMarketRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_180sdp"
-            android:visibility="gone"
-            android:layout_below="@+id/StockMarketMovie_Txt"/>
-
-        <TextView
-            android:id="@+id/ActionMovie_Txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/StockMarketRecycler"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/ActionMovie"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_14sdp"
-            android:visibility="gone"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ActionMRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_180sdp"
-            android:layout_below="@+id/ActionMovie_Txt"
-            android:visibility="gone"/>
+            android:id="@+id/viewPagers"
+            layout="@layout/view_pager_layout" />
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/parent_rv"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_below="@id/viewPagers"
+           android:visibility="gone"/>
     </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 </FrameLayout>
