--- a/app/src/main/res/layout/fragment_pan_india.xml
+++ b/app/src/main/res/layout/fragment_pan_india.xml
@@ -4,16 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appBg"
-    tools:context=".A_HomeFragment.Fragments.B_PanIndia.PanIndia">
+    tools:context=".A_HomeFragment.Fragments.B_IndianFlim.IndianFilm">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/panIndiaRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pan India Movie"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_30sdp"
-        android:layout_gravity="center"
-        android:gravity="center"/>
-
+        android:layout_height="match_parent"/>
 </FrameLayout>
