--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -6,13 +6,9 @@
     android:background="@color/appBg"
     tools:context=".A_HomeFragment.Fragments.E_Series.Series">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/white"
-        android:text="Series"
-        android:gravity="center"
-        android:textSize="@dimen/_30sdp"/>
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/seriesRecycler"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 
 </FrameLayout>
