--- a/app/src/main/res/layout/movie_item_row.xml
+++ b/app/src/main/res/layout/movie_item_row.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/_96sdp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?android:attr/selectableItemBackground">
+
     <LinearLayout
-        android:layout_width="@dimen/_95sdp"
-        android:layout_height="@dimen/_180sdp"
+        android:layout_width="@dimen/_96sdp"
+        android:layout_height="@dimen/_140sdp"
+        android:layout_centerInParent="true"
+        android:background="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/movieTxt"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_140sdp"
+            android:background="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/appBg"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_10sdp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/sifimovieCard"
-        android:layout_width="@dimen/_95sdp"
-        android:layout_height="@dimen/_140sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
-        app:cardElevation="@dimen/_10sdp"
-        app:cardBackgroundColor="@color/appBg">
-        <ImageView
-            android:id="@+id/sifiPoster"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </androidx.cardview.widget.CardView>
-        <TextView
-            android:id="@+id/sifiMovieTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/sifiViews"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/movieImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_140sdp"
+                android:background="?android:attr/selectableItemBackground">
+            </ImageView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
-
 </RelativeLayout>
