--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".J_Profile.EditProfileActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".H_Authentication.EditProfileActivity"
     android:background="@color/purple_700">
 
     <Toolbar
@@ -134,46 +134,26 @@
                     android:textColorHint="#D8D3D3"
                     android:textColor="@color/white"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Gender"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_15sdp" />
+                <EditText
+                    android:id="@+id/personGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/signup_background"
+                    android:padding="@dimen/_13sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:hint="gender"
+                    android:textColorHint="#D8D3D3"
+                    android:textColor="@color/white"/>
+
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/genderLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:layout_marginRight="@dimen/_15sdp"
-                android:layout_below="@id/edtiLayout"
-                android:orientation="horizontal"
-                android:weightSum="3">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/gender_bg"
-                    android:padding="@dimen/_15sdp"
-                    android:layout_weight="1"
-                    android:layout_marginRight="@dimen/_5sdp"
-                    android:text="Male"
-                    android:gravity="center"
-                    android:textColor="@color/white"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/gender_bg"
-                    android:padding="@dimen/_15sdp"
-                    android:layout_weight="1"
-                    android:layout_marginRight="@dimen/_5sdp"
-                    android:text="Female"
-                    android:gravity="center"
-                    android:textColor="@color/white"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/gender_bg"
-                    android:padding="@dimen/_15sdp"
-                    android:layout_weight="1"
-                    android:text="Other"
-                    android:gravity="center"
-                    android:textColor="@color/white"/>
-            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/save"
@@ -181,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_15sdp"
                 android:layout_alignParentBottom="true"
-                android:layout_below="@+id/genderLayout"
+                android:layout_below="@+id/edtiLayout"
                 android:background="@drawable/btn"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginRight="@dimen/_15sdp"
