--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".E_Profile.Profile"
+    tools:context=".J_Profile.Profile"
     android:background="@color/appBg">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -30,11 +30,13 @@
                         android:id="@+id/userName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
                         android:text="@string/userName"
                         android:textColor="@color/white"
                         android:layout_toEndOf="@+id/back"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/setting"
+                        android:layout_toRightOf="@+id/back"
+                        android:layout_centerInParent="true"
                         android:textSize="@dimen/_15sdp"
                         android:fontFamily="@font/roboto_bold"/>
 
