--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="appBg">#151620</color>
-    <color name="appBg2.0">#1E202E</color>
+    <color name="appBg2.0">#1B1C27</color>
     <color name="lightWhite">#8D8E92</color>
     <color name="yellow">#C8B703</color>
     <color name="lightYellow">#C8B703</color>
